Exercicio 5.11 pg61 - adicionado botao voltar para a pagina de adicionar contato
Exercicio 5.14 pg66
- exceções e códigos http
- declarando redirecionamento no web.xml

--- a/21/apache-tomcat-7.0.47/wtpwebapps/fj21-agenda/adiciona-contato.html
+++ b/21/apache-tomcat-7.0.47/wtpwebapps/fj21-agenda/adiciona-contato.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Adiciona Contatos</h1>
 	<hr />
-	<form action="adicionaContato">
+	<form action="adicionaContato" method="post">
 		Nome: <input type="text" name="nome" /><br />
 		E-mail: <input type="text" name="email" /><br />
 		Endereço: <input type="text" name="endereco" /><br />
